; ModuleID = '/home/carl/AnghaBench/micropython/ports/pic16bit/extr_pic16bit_mphal.c_mp_hal_stdout_tx_strn_cooked.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/pic16bit/extr_pic16bit_mphal.c_mp_hal_stdout_tx_strn_cooked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_hal_stdout_tx_strn_cooked(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  br label %5

5:                                                ; preds = %20, %2
  %6 = load i64, i64* %4, align 8
  %7 = icmp ugt i64 %6, 0
  br i1 %7, label %8, label %23

8:                                                ; preds = %5
  %9 = load i8*, i8** %3, align 8
  %10 = load i8, i8* %9, align 1
  %11 = sext i8 %10 to i32
  %12 = icmp eq i32 %11, 10
  br i1 %12, label %13, label %15

13:                                               ; preds = %8
  %14 = call i32 @uart_tx_char(i8 signext 13)
  br label %15

15:                                               ; preds = %13, %8
  %16 = load i8*, i8** %3, align 8
  %17 = getelementptr inbounds i8, i8* %16, i32 1
  store i8* %17, i8** %3, align 8
  %18 = load i8, i8* %16, align 1
  %19 = call i32 @uart_tx_char(i8 signext %18)
  br label %20

20:                                               ; preds = %15
  %21 = load i64, i64* %4, align 8
  %22 = add i64 %21, -1
  store i64 %22, i64* %4, align 8
  br label %5

23:                                               ; preds = %5
  ret void
}

declare dso_local i32 @uart_tx_char(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
